mess with JVM flags to try to get async profiler to report a correct flame graph
Signed-off-by: Ludovic Orban <lorban@bitronix.be>