@@ -205,11 +205,15 @@ public class PerfTestParams implements Serializable
     {
         List<String> result = new ArrayList<>();
         result.add("-Xlog:gc*:file=gc.log:time,level,tags");
-        result.add("-XX:+UnlockExperimentalVMOptions"); // JDK 11 needs this flag to enable ZGC
-        result.add("-XX:+UseZGC");
+        result.add("-XX:+UnlockExperimentalVMOptions");
+
+        // disable ZGC and Tiered Compilation to workaround https://bugs.openjdk.java.net/browse/JDK-8281677
+        //result.add("-XX:+UseZGC");
+        result.add("-XX:-TieredCompilation");
+
         result.add("-XX:+AlwaysPreTouch");
         if (MONITORED_ITEMS.contains(ConfigurableMonitor.Item.ASYNC_PROF_CPU) || MONITORED_ITEMS.contains(ConfigurableMonitor.Item.ASYNC_PROF_ALLOCATION))
-            result.addAll(Arrays.asList("-XX:+UnlockDiagnosticVMOptions", "-XX:+DebugNonSafepoints"));
+            result.addAll(List.of("-XX:+UnlockDiagnosticVMOptions", "-XX:+DebugNonSafepoints"));
         result.addAll(Arrays.asList(extra));
         return result.toArray(new String[0]);
     }
